--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,112 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  background: #ececec;
+  font-family: 'Montserrat', sans-serif;
+}
+.nav {
+  /* Flexbox Properties */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  border: 1px solid black;
+  background-color: #E1DFE2;
+  border-radius: 10px 10px 0px 0px;
+  height: 30px;
+  margin-top: 5%;
+  margin-left: 10%;
+  margin-right: 10%;
+
+}
+
+.nav-buttons {
+  display: flex;
+  justify-content: space-evenly;
+
+  width: 70px;
+}
+
+.nav-button {
+  border-radius: 100%;
+  width: 15px;
+  height: 15px;
+}
+
+.btn-red {
+  background-color: #FF5F58;
+}
+
+.btn-orange {
+  background-color: #FFBE2F;
+}
+
+.btn-green {
+  background-color: #2AC940;
+}
+
+
+.nav-menu {
+  /* BORDER IS FOR DEBUGGING: */
+  /* border: 2px solid blue; */
+}
+
+.nav-logo {
+  margin: 10px;
+}
+
+.nav-link {
+  color: black;
+  text-decoration: none;
+}
+
+.nav-link:hover {
+  color: rgb(143, 121, 121);
+}
+
+.nav-link {
+  margin-right: 10px;
+}
+
+.big-news {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  /* border-bottom: 1px solid black; */
+  background-color: white;
+  padding-top: 30px;
+  margin-left: 10%;
+  margin-right: 10%;
+  height: auto;
+}
+
+.breaking-news {
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+}
+
+.tech-logo {
+  width: 30px;
+  height: 15x;
+}
+
+.footer {
+  border: 1px solid black;
+  background-color: #E1DFE2;
+  border-radius: 0px 0px 10px 10px;
+  margin-left: 10%;
+  margin-right: 10%;
+  height: 30px;
+}
+
+.breaking-news-h1 {
+  font-size: 40px;
+}
+
+.breaking-news-p {
+  margin-left: 30px;
+  margin-right: 30px;
 }
