--- a/code/style.css
+++ b/code/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #ececec;
+  background: #FFFFFF;
   font-family: 'Montserrat', sans-serif;
 }
 .nav {
@@ -9,7 +9,7 @@ body {
   align-items: center;
 
   border: 1px solid black;
-  background-color: #E1DFE2;
+  background-color: #FFFFFF;
   border-radius: 10px 10px 0px 0px;
   height: 30px;
   margin-top: 5%;
@@ -43,27 +43,19 @@ body {
   background-color: #2AC940;
 }
 
-
-.nav-menu {
-  /* BORDER IS FOR DEBUGGING: */
-  /* border: 2px solid blue; */
-}
-
 .nav-logo {
   margin: 10px;
 }
 
 .nav-link {
   color: black;
-  text-decoration: none;
+  margin-right: 10px;
+  
 }
 
 .nav-link:hover {
   color: rgb(143, 121, 121);
-}
-
-.nav-link {
-  margin-right: 10px;
+  text-decoration: underline;
 }
 
 .big-news {
@@ -74,8 +66,9 @@ body {
   border-left: 1px solid black;
   border-right: 1px solid black;
   /* border-bottom: 1px solid black; */
-  background-color: white;
+  background-color: #FAFAFA;
   padding-top: 30px;
+  padding-bottom: 30px;
   margin-left: 10%;
   margin-right: 10%;
   height: auto;
@@ -86,6 +79,12 @@ body {
  flex-direction: column;
  justify-content: center;
  align-items: center;
+ background-color: #FFFFFF;
+ margin-left: 50px;
+ margin-right: 50px;
+
+ box-shadow: 0 0 5px 0 #dfdfdf;
+
 }
 
 .tech-logo {
@@ -95,7 +94,7 @@ body {
 
 .footer {
   border: 1px solid black;
-  background-color: #E1DFE2;
+  background-color:#FFFFFF;
   border-radius: 0px 0px 10px 10px;
   margin-left: 10%;
   margin-right: 10%;
