--- a/code/style.css
+++ b/code/style.css
@@ -1,7 +1,8 @@
 body {
-  background: #FFFFFF;
+  background-color: #ECECEC;
   font-family: 'Montserrat', sans-serif;
 }
+
 .nav {
   /* Flexbox Properties */
   display: flex;
@@ -9,12 +10,15 @@ body {
   align-items: center;
 
   border: 1px solid black;
-  background-color: #FFFFFF;
+  background-color: #E1DFE2;
   border-radius: 10px 10px 0px 0px;
-  height: 30px;
+  height: 60px;
   margin-top: 5%;
   margin-left: 10%;
   margin-right: 10%;
+
+  padding-left: 10px;
+  padding-right: 10px;
 
 }
 
@@ -43,29 +47,26 @@ body {
   background-color: #2AC940;
 }
 
-.nav-logo {
-  margin: 10px;
-}
-
 .nav-link {
   color: black;
   margin-right: 10px;
-  
+  font-weight: bold;
+  text-decoration: none;
+
 }
 
 .nav-link:hover {
   color: rgb(143, 121, 121);
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .big-news {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
 
   border-left: 1px solid black;
   border-right: 1px solid black;
-  /* border-bottom: 1px solid black; */
   background-color: #FAFAFA;
   padding-top: 30px;
   padding-bottom: 30px;
@@ -75,30 +76,21 @@ body {
 }
 
 .breaking-news {
- display: flex;
- flex-direction: column;
- justify-content: center;
- align-items: center;
- background-color: #FFFFFF;
- margin-left: 50px;
- margin-right: 50px;
-
- box-shadow: 0 0 5px 0 #dfdfdf;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #FFFFFF;
+  margin-left: 50px;
+  margin-right: 50px;
+  box-shadow: 5px 5px 15px 5px #dfdfdf;
+  border-radius: 10px;
 
 }
 
-.tech-logo {
-  width: 30px;
-  height: 15x;
-}
-
-.footer {
-  border: 1px solid black;
-  background-color:#FFFFFF;
-  border-radius: 0px 0px 10px 10px;
-  margin-left: 10%;
-  margin-right: 10%;
-  height: 30px;
+.breaking-news-logo {
+  width: 100%;
+  border-radius: 10px 10px 0px 0px;
 }
 
 .breaking-news-h1 {
@@ -108,4 +100,181 @@ body {
 .breaking-news-p {
   margin-left: 30px;
   margin-right: 30px;
+  text-align: center;
+}
+
+.regular-news {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-left: 50px;
+  margin-right: 50px;
+
+}
+
+.card-layout {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  background-color: #FFFFFF;
+  box-shadow: 5px 5px 15px 5px #dfdfdf;
+  border-radius: 10px 10px 10px 10px;
+  margin-right: 10px;
+  margin-top: 20px;
+  width: 300px;
+}
+
+.card-layout img {
+  width: 100%;
+  border-radius: 10px 10px 0px 0px;
+}
+
+.card-layout:hover {
+  box-shadow: 0 0 100px 0 #dfdfdf;
+}
+
+.card-container {
+  text-align: center;
+}
+
+.card-container h4 {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.card-container p {
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.tech-logo {
+  width: 60px;
+  height: 30px;
+  overflow: hidden;
+  transition-duration: 0.8s;
+  transition-property: transform;
+}
+
+.tech-logo:hover {
+  transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+}
+
+
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+  background-color: #E1DFE2;
+  border-radius: 0px 0px 10px 10px;
+  margin-left: 10%;
+  margin-right: 10%;
+  height: 60px;
+}
+
+/* TABLET LAYOUT */
+@media (max-width: 1023px) {
+  .nav {
+    display: flex;
+    flex-direction: row;
+
+    margin-left: 1%;
+    margin-right: 1%;
+
+  }
+
+  .big-news {
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+
+  .breaking-news-h1 {
+    font-size: 33px;
+    font-weight: bold;
+  }
+
+  .regular-news {
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+
+  .card-layout {
+    width: 40%;
+  }
+
+  .card-container {
+    text-align: center;
+  }
+
+  .footer {
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+}
+
+
+
+
+/* MOBILE LAYOUT */
+@media (max-width: 668px) {
+
+  .nav {
+    display: flex;
+    flex-direction: row;
+
+    margin-left: 1%;
+    margin-right: 1%;
+
+  }
+
+  .big-news {
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+
+  .breaking-news {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFFFF;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: auto;
+    box-shadow: 0 0 5px 0 #dfdfdf;
+  }
+
+  .breaking-news-h1 {
+    font-size: 33px;
+    font-weight: bold;
+  }
+
+  .regular-news {
+    flex-direction: column;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .card-layout {
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .card-container {
+    text-align: center;
+  }
+
+  .footer {
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+
 }
