--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,7 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background:whitesmoke;
+  color: black;
+}
+.previous-artists{
+  display: flex;
 }
