--- a/code/style.css
+++ b/code/style.css
@@ -1,7 +1,39 @@
 html {
-  background:whitesmoke;
+  background:white;
   color: black;
 }
+
+header{
+  display: flex;
+  align-items: center;
+  border-color: black;
+}
+
+h1{
+  font-family: 'Abril Fatface', cursive;
+  font-size: 60px;
+}
+
+h2{
+  font-family: 'Abril Fatface', cursive;
+  font-size: 40px;
+}
+
+h3{
+  font-family: 'Abril Fatface', cursive;
+  font-size: 20px;
+}
+
+.mainarticle{
+  font-size: 20px;
+}
+
+p{
+  font-family: 'Amiri', serif;
+}
+
 .previous-artists{
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
