--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,47 @@
-html {
-  background: #0025ff;
-  color: #fff;
+*{
+  /*Makes sure that all elements include the content, padding and border in the width and height property*/
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
+
+body {
+  background: #dbdce6;
+  color:#000000;
+  font-family: 'Livvic', sans-serif;
+  font-size: 16px;
+}
+
+.header {
+  background-color: #1a1919;
+  padding: 30px 10px;
+  border: 2px solid white;
+  margin: 0px;
+  color:#f7f5f0;
+  
+}
+.header-title h1 {
+  font-family: 'Pacifico', cursive;
+  color:#f7f5f0;
+  font-size: 20px;
+  text-align: left;
+}
+
+.nav-container {
+  padding: 10;
+  border: 2px solid white;
+  display: flex;
+  flex-direction: row-reverse;
+  
+  
+}
+
+.nav-button{
+  padding: 5px;
+  list-style: none;
+  text-align: center;
+  border: 2px solid white;
+}
+
+
+
