more changes and cause i'm having a hard time with github another upload :D

--- a/code/style.css
+++ b/code/style.css
@@ -2,6 +2,10 @@ html {
   background:white;
   color: black;
 }
+a:link, a:visited {
+  text-decoration: none;
+  color: black;
+ }
 
 header{
   display: flex;
