Added general structure to the code

--- a/code/style.css
+++ b/code/style.css
@@ -2,3 +2,45 @@ html {
   background: #0025ff;
   color: #fff;
 }
+
+
+
+.logo {
+
+}
+
+.big-news {
+
+}
+
+.big-news-image {
+
+}
+
+.big-news-text {
+
+}
+
+.other-news {
+
+}
+
+.other-news-image {
+
+}
+
+
+
+/* Tablet - only include the elements that I want to behave differently on this specific device */
+@media (min-width: 667px) and (max-width: 1024px) { 
+
+  /*body {
+    background-color: green;
+  }*/
+}
+
+/* Desktop - only include the elements that I want to behave differently on this specific device */
+@media (min-width: 1025px) { 
+
+}
+
